Fix mobile theme toggle overlapping hamburger menu
On small screens the fixed-position toggle sat at the same top-right
corner as the absolute-positioned nav hamburger. A media query shifts
the toggle left (right: 65px) on palm-width viewports to clear it.

--- a/css/main.scss
+++ b/css/main.scss
@@ -75,6 +75,11 @@ $on-laptop:        800px;
         background: $background-color-dark;
         color: $text-color-dark;
     }
+
+    @include media-query($on-palm) {
+        top: 10px;
+        right: 65px;
+    }
 }
 
 // Copy-to-clipboard button on code blocks
